test/error/iocheck/err2.rzy
// Error: query is not allowed to write state


interface
  IfaceQuerry
    function query():R{0,100};
  end
  
component
  Err2
    input
      in  : IfaceQuerry;
    
    implementation elementary
    
    var
      a : R{0,100};
    
    entry
      a := 0;
    end
    
    function in.query():R{0,100}
      a := 42;
      return 0;
    end
    
  end

